frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-frontend  # Label selector used by the Deployment to manage Pods
  template:
    metadata:
      labels:
        app: react-frontend  # Labels applied to the Pods created by the Deployment, Also Used by service to find pod
    spec:
      containers:
      - name: node-backend
        image: divyapatel42/ecommerce-webapp:frontendv1
        ports:
        - containerPort: 3000
