ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default   
  annotations:
    kubernetes.io/ingress.class: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
    - host: kfrontend.devopswithdivya.me   #YOU CAN CHANGE THIS WITH YOUR DESIRED HOST NAME TO ACCESS THE WEBSITE
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
    - host: kbackend.devopswithdivya.me   #YOU CAN CHANGE THIS WITH YOUR DESIRED HOST NAME TO ACCESS THE WEBSITE
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
